--- a/.github/workflows/ci_build_test.yml
+++ b/.github/workflows/ci_build_test.yml
@@ -33,29 +33,11 @@ jobs:
         with:
           command: build
           args: --verbose --workspace
-      - name: Cargo Test excluding conformance tests
+      - name: Cargo Test
         uses: actions-rs/cargo@v1
         with:
           command: test
           args: --verbose --workspace
-      # Currently just runs the conformance tests. Further conformance report generation will be part of
-      # https://github.com/partiql/partiql-lang-rust/issues/79.
-      # Uses the 'continue-on-error' workflow syntax which means the GitHub Actions build will succeed even if the
-      # workflow step failed. Results are still viewable (example run:
-      # https://github.com/partiql/partiql-lang-rust/runs/6186121711?check_suite_focus=true#step:8:686)
-      # More details on the 'continue-on-error' workflow syntax can be found here:
-      # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idcontinue-on-error
-      - name: Cargo Test of the conformance tests (can fail)
-        uses: actions-rs/cargo@v1
-        continue-on-error: true
-        with:
-          command: test
-          args: --verbose --package partiql-conformance-tests --features "conformance_test"
-      - name: Rustfmt Check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --verbose --all -- --check
       # `clippy-check` will run `cargo clippy` on new pull requests. Due to a limitation in GitHub
       # permissions, the behavior of the Action is different depending on the source of the PR. If the
       # PR comes from the partiql-lang-rust project itself, any suggestions will be added to the PR as comments.
@@ -82,116 +64,3 @@ jobs:
         with:
           path: ./*
           key: ${{ github.sha }}
-  # Conformance report generation and comparison report generation job will run only after the `Build and Test` job
-  # succeeds.
-  conformance-report:
-    name: Create conformance report for `push` and `pull_request` events
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      # Pull down the cached `partiql-lang-rust` build from the `Build and Test` job. This allows us to reuse without
-      # needing to rebuild. If pulling the build fails, the subsequent `cargo test` will rebuild.
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Rust Toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - uses: actions/cache@v2
-        id: restore-build
-        with:
-          path: ./*
-          key: ${{ github.sha }}
-      # Run the conformance tests (i.e. `cargo test`) and save to a json file. This uses the "format" unstable compile
-      # option to save as json. In the future, may want to use the `cargo_metadata` crate (https://crates.io/crates/cargo_metadata)
-      # to format and use the output.
-      - name: Cargo Test of the conformance tests (can fail) and save to json file
-        continue-on-error: true
-        run: cargo test --verbose --package partiql-conformance-tests --features "conformance_test" -- -Z unstable-options --format json > cargo_test_results.json
-      # Create a conformance report from the `cargo test` json file
-      - run: cargo run --features report_tool --bin generate_cts_report cargo_test_results.json ${GITHUB_SHA} cts_report.json
-      # Upload conformance report for comparison with future runs
-      - name: Upload cts_report.json
-        uses: actions/upload-artifact@v3
-        with:
-          path: cts_report.json
-      # Cache the `cargo build` and conformance report for `conformance-report-comparison` job (pull_request event only)
-      - name: Cache `cargo build` and conformance report
-        if: github.event_name == 'pull_request'
-        uses: actions/cache@v2
-        id: restore-build-and-conformance
-        with:
-          path: ./*
-          key: ${{ github.sha }}-conformance-report
-  conformance-report-comparison:
-    name: Create comparison report for `pull_request` event
-    runs-on: ubuntu-latest
-    needs: [conformance-report]
-    if: github.event_name == 'pull_request'
-    steps:
-      # Pull down cached `cargo build` and conformance report
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Rust Toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - uses: actions/cache@v2
-        id: restore-build-and-conformance
-        with:
-          path: ./*
-          key: ${{ github.sha }}-conformance-report
-      # Download conformance report from `main` to create comparison report. If `main` has no report, use a backup
-      # report (stored in partiql-conformance-tests/backup_conformance_report.json). Alternatively, we could consider
-      # - pulling `main` branch and rerun the tests
-      # - pulling latest release and rerun the tests
-      # - compare to an empty file
-      # - don't perform comparisons
-      - name: Download cts_report.json from `main` branch
-        uses: dawidd6/action-download-artifact@v2
-        id: download-report
-        continue-on-error: true
-        with:
-          workflow: ci_build_test.yml
-          branch: main
-      - name: backup case if download fails
-        if: ${{ steps.download-report.outcome == 'failure' }}
-        run: mkdir -p artifact && cp -r ./partiql-conformance-tests/backup_conformance_report.json ./artifact/cts_report.json
-      # Run conformance report comparison. Generates cts-comparison-report.md
-      - run: cargo run --features report_tool --bin generate_comparison_report ./artifact/cts_report.json cts_report.json cts-comparison-report.md
-      # Print conformance report to GitHub actions workflow summary page
-      - name: print markdown in run
-        run: cat cts-comparison-report.md >> $GITHUB_STEP_SUMMARY
-      # Find comment w/ conformance comparison if previous comment published
-      - name: Find Comment
-        uses: peter-evans/find-comment@v2
-        continue-on-error: true
-        id: fc
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          comment-author: 'github-actions[bot]'
-          body-includes: Conformance
-      # Convert the markdown comparison report to a readable form for GitHub PR comments
-      - id: get-comment-body
-        continue-on-error: true
-        run: |
-          body="$(cat ./cts-comparison-report.md)"
-          body="${body//'%'/'%25'}"
-          body="${body//$'\n'/'%0A'}"
-          body="${body//$'\r'/'%0D'}"
-          echo "::set-output name=body::$body"
-      # Create or update (if previous comment exists) with markdown version of comparison report
-      - name: Create or update comment
-        continue-on-error: true
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body: ${{ steps.get-comment-body.outputs.body }}
-          edit-mode: replace
