--- a/partiql-playground/Cargo.toml
+++ b/partiql-playground/Cargo.toml
@@ -15,12 +15,15 @@ exclude = [
 edition = "2021"
 version = "0.1.0"
 
+[workspace]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-partiql-parser = "0.1.*"
+partiql-parser = { features=["serde"], version = "0.1.*" }
 serde_json = "1.*"
 wasm-bindgen = "0.2"
+
