--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "partiql-playground/src/ace-builds"]
-	path = partiql-playground/src/ace-builds
+[submodule "src/ace-builds"]
+	path = src/ace-builds
 	url = https://github.com/ajaxorg/ace-builds.git
