--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/ace-builds"]
 	path = src/ace-builds
-	url = https://github.com/ajaxorg/ace-builds.git
+	url = git@github.com:ajaxorg/ace-builds.git
