--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,12 @@ version = "0.2.0"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-partiql-parser = { features=["serde"], version = "0.2.*" }
+partiql-parser = { git = "https://github.com/partiql/partiql-lang-rust.git", features=["serde"], version = "0.2.*" }
+partiql-logical-planner = { git = "https://github.com/partiql/partiql-lang-rust.git", version = "0.2.*"}
+partiql-eval = {  git = "https://github.com/partiql/partiql-lang-rust.git", version = "0.2.*"}
+partiql-value = {  git = "https://github.com/partiql/partiql-lang-rust.git", features=["serde"], version = "0.2.*"}
+partiql-logical = {  git = "https://github.com/partiql/partiql-lang-rust.git", features=["serde"], version = "0.2.*"}
+
 serde_json = "1.*"
 wasm-bindgen = "0.2"
 
