--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,10 +26,7 @@ jobs:
           toolchain: nightly-2022-08-11
           override: true
       - name: Cargo Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --verbose --workspace --all-features --no-fail-fast
+        run: cargo test --verbose --workspace --all-features --no-fail-fast -- -Z unstable-options --ensure-time
         env:
           CARGO_INCREMENTAL: '0'
           # https://github.com/marketplace/actions/rust-grcov
