--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,31 +2,36 @@ name: Code Coverage
 
 on: [push, pull_request]
 
+env:
+  RUST_TEST_TIME_UNIT: 150,5000
+  RUST_TEST_TIME_INTEGRATION: 150,5000
+
 jobs:
   build:
     name: Build and Test
     runs-on: ${{ matrix.os }}
     # We want to run on external PRs, but not on internal ones as push automatically builds
     # H/T: https://github.com/Dart-Code/Dart-Code/commit/612732d5879730608baa9622bf7f5e5b7b51ae65
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != 'partiql/partiql-rust-playground'
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != 'partiql/partiql-lang-rust'
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-20.04]
 
     steps:
       - name: Git Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: recursive
       - name: Rust Toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
+          # Coverage requires the nightly toolchain because it uses the presently unstable `-Z profile` feature
+          # See: https://github.com/rust-lang/rust/issues/42524
+          # See also: https://github.com/actions-rs/grcov#usage
           # nightly can be very volatile--pin this to a version we know works well...
-          toolchain: nightly-2022-08-11
-          override: true
+          toolchain: nightly-2023-03-09
       - name: Cargo Test
-        run: cargo test --verbose --workspace --all-features --no-fail-fast -- -Z unstable-options --ensure-time
+        run: cargo test --verbose --workspace
         env:
           CARGO_INCREMENTAL: '0'
           # https://github.com/marketplace/actions/rust-grcov
