--- a/pkg-web/package.json
+++ b/pkg-web/package.json
@@ -18,7 +18,9 @@
   "module": "partiql_playground.js",
   "homepage": "https://github.com/partiql/partiql-lang-rust",
   "types": "partiql_playground.d.ts",
-  "sideEffects": false,
+  "sideEffects": [
+    "./snippets/*"
+  ],
   "keywords": [
     "sql",
     "ast",
